--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 /* Variables globales */
 :root {
     --background-dark: #333333; /* Fondo oscuro */
-    --primary-color: #B336B3; /* Morado */
+    --primary-color: #8A2BE2; /* Morado */
     --secondary-color: #FFFB00; /* Amarillo */
     --tertiary-color: #D8D8D8; /* Blanco sucio */
     --text-light: #ffffff; /* Texto blanco */
