new events view

--- a/LocalVibes/Views/Home/Home.cshtml
+++ b/LocalVibes/Views/Home/Home.cshtml
@@ -3,7 +3,7 @@
 }
 
 <head>
-    <link rel="stylesheet" href="~/css/Views/Home/home.css"></link>
+    <link rel="stylesheet" href="~/css/Views/Home/home.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src='https://unpkg.com/wicg-inert@latest/dist/inert.min.js'></script>
@@ -16,7 +16,7 @@
         <div class="position-absolute top-50 start-50 translate-middle text-center text-container">
             <h1 class="display-5 fw-bold">Descubre Conciertos</h1>
             <p class="lead">Encuentra eventos cerca de ti y disfruta de la mejor música en vivo.</p>
-            <a href="@Url.Action("Explore", "Home")" class="btn btn-primary action-button">Explorar Conciertos</a>
+            <a href="@Url.Action("Events", "Home")" class="btn btn-primary action-button">Explorar Conciertos</a>
         </div>
     </div>
 
@@ -34,45 +34,6 @@
     </div>
 </div>
 
-<script>
-    document.querySelectorAll('.action-button').forEach(button => {
-        button.addEventListener('click', function (e) {
-            e.preventDefault();
-
-            const clickedDivider = this.closest('.divider');
-            const otherDivider = Array.from(document.querySelectorAll('.divider')).find(div => div !== clickedDivider);
-
-            // Remove fish-eye effect on clicked divider
-            clickedDivider.classList.add('removing-effect');
-
-            // Expand clicked divider and fade out the other
-            clickedDivider.classList.add('expanding');
-            if (otherDivider) {
-                otherDivider.classList.add('fading');
-            }
-
-            // Wait for the animation/transition to complete
-            clickedDivider.addEventListener('transitionend', function handleTransitionEnd() {
-                window.location.href = e.target.getAttribute('href');
-                clickedDivider.removeEventListener('transitionend', handleTransitionEnd); // Clean up event listener
-            });
-        });
-    });
-
-    var map = L.map('map', {
-        center: [41.38879, 2.15899],
-        zoom: 13,                   
-        zoomControl: false,         
-        dragging: false,           
-        scrollWheelZoom: false,    
-        doubleClickZoom: false,    
-        boxZoom: false,             
-        keyboard: false             
-    });
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: 'Map data © <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors'
-    }).addTo(map);
-</script>
+<script src="~/js/View/Home/home.js"></script>
 
 
